Depth support, better pathing
